--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,6 @@
-game/cache/bytecode.rpyb
-game/cache/py3analysis.rpyb
-game/cache/screens.rpyb
-game/cache/shaders.txt
-game/saves/1-1-LT1.save
-game/saves/_reload-2-LT1.save
-game/saves/auto-1-LT1.save
-game/saves/auto-10-LT1.save
-game/saves/auto-2-LT1.save
-game/saves/auto-3-LT1.save
-game/saves/auto-4-LT1.save
-game/saves/auto-5-LT1.save
-game/saves/auto-6-LT1.save
-game/saves/auto-7-LT1.save
-game/saves/auto-8-LT1.save
-game/saves/auto-9-LT1.save
+*.rpyc
+*.rpyb
+*.rpymc
+*.save
 game/saves/navigation.json
 game/saves/persistent
